Migrate to KevinnZou/compose-webview-multiplatform partially